--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Solarium\\QueryType\\Luke": "src/Solarium/QueryType/Luke"
+            "Solarium\\QueryType\\Luke": "src"
         }
     }
 }
